Add login functionality

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,17 @@
         <nav>
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
-            <a href="/login">Log In</a>
+            {{#if loggedIn}}
+                <button id="logout">Log Out</button>
+            {{else}}
+                <a href="/login">Log In</a>
+            {{/if}}
         </nav>
     </header>
-
-    {{{ body }}}
+    
+    <main>
+        {{{ body }}}
+    </main>
 
 </body>
 </html>
