Add signup functionality

--- a/views/user-profile.handlebars
+++ b/views/user-profile.handlebars
@@ -13,6 +13,7 @@
 <form>
     <input id="username-signup" type="text" name="username-signup" placeholder="Username" required/>
     <input id="password-signup" type="password" name="password-signup" placeholder="Password" required/>
+    <label for="password-signup">Password must be at least 8 characters</label>
     <button id="signup-btn">Sign Up</button>
 </form>
 
