--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,8 @@
         {{{ body }}}
     </main>
 
-    <script src="./js/logout.js"></script>
+    {{#if loggedIn}}
+        <script src="./js/logout.js"></script>
+    {{/if}}
 </body>
 </html>
