--- a/views/partials/login-signup.handlebars
+++ b/views/partials/login-signup.handlebars
@@ -1,5 +1,3 @@
-<h1>Account</h1>
-
 <h2>Log In</h2>
 <p>Already have an account? Enter your username and password below.</p>
 <form>
@@ -17,4 +15,4 @@
     <button id="signup-btn">Sign Up</button>
 </form>
 
-<script src="./js/userProfile.js"></script>
+<script src="./js/loginSignup.js"></script>
