Fix dashboard bug for non-logged in user. Add text for user with no blog posts.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,11 +3,15 @@
 {{#if loggedIn}}
     <button id="newPostBtn">Add New Post</button>
     <h2>Your Blog Posts</h2>
-    {{#each userPosts as |post|}}
-        <h3>{{post.title}}</h3>
-        <p>{{formatDate post.createdAt}}</p>
-        <p>{{post.content}}</p>
-    {{/each}}
+    {{#if userPosts}}
+        {{#each userPosts as |post|}}
+            <h3>{{post.title}}</h3>
+            <p>{{formatDate post.createdAt}}</p>
+            <p>{{post.content}}</p>
+        {{/each}}
+    {{else}}
+        <p>You haven't added any blog posts yet. Click "Add New Post" above to get started!</p>
+    {{/if}}
 {{else}}
     <p>You must be logged in to view the dashboard. Log in or create an account below.</p>
     {{> login-signup}}
