--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,4 @@
 
 <h2>Latest Blog Posts</h2>
 
-{{#each posts as |post|}}
-    <h3>{{post.title}}</h3>
-    <p>{{post.content}}</p>
-{{/each}}
+{{> posts}}
