--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <h1>Dashboard</h1>
 
 {{#if loggedIn}}
-    <button id="newPostBtn">Add New Post</button>
+    <a href="/new-post" id="new-post-btn">Add New Post</a>
     <h2>Your Blog Posts</h2>
     {{#if posts}}
         {{> posts}}
