Fix casing on submit button element

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,7 +5,7 @@
 <h2>Leave a Comment</h2>
 <form>
     <textarea id="comment" name="comment" cols="100" rows="3" placeholder="Enter your comment here" required></textarea>
-    <button id="submitBtn">Submit</button>
+    <button id="submit-btn">Submit</button>
 </form>
 
 <div id="comments">
