Add delete post functionality

--- a/views/dashboard-post.handlebars
+++ b/views/dashboard-post.handlebars
@@ -6,6 +6,7 @@
     <p>Posted on {{formatDate post.createdAt}}</p>
     <textarea id="content" required>{{post.content}}</textarea>
     <button id="update-btn">Update Post</button>
+    <button id="delete-btn">Delete Post</button>
 </form>
 
 <div id="comments">
