--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,18 +1,18 @@
 <h1>Dashboard</h1>
 
 {{#if loggedIn}}
-    <a href="/new-post" id="new-post-btn">Add New Post</a>
+    <a href="/new-post" id="new-post-btn" class="btn btn-secondary">Add New Post</a>
     <h2>Your Blog Posts</h2>
     {{#if posts}}
         {{#each posts as |post|}}
             <h3><a href="/dashboard/{{post.id}}">{{post.title}}</a></h3>
-            <p>Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
+            <p class="italic">Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
         {{/each}}
     {{else}}
         <p>You haven't added any blog posts yet. Click "Add New Post" above to get started!</p>
     {{/if}}
 {{else}}
-    <p>You must be logged in to view the dashboard. Log in or create an account below.</p>
+    <p class="lead">You must be logged in to view the dashboard. Log in or create an account below.</p>
     {{> login-signup}}
 {{/if}}
 
