--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -2,8 +2,8 @@
 
 <form>
     <input id="title" type="text" name="title" placeholder="Title" required/>
-    <textarea id="content" name="content" cols="100" rows="40" placeholder="Enter your post here" required></textarea>
-    <button id="add-post-btn">Add Post</button>
+    <textarea id="content" name="content" rows="20" placeholder="Enter your post here" required></textarea>
+    <button id="add-post-btn" class="btn btn-success">Add Post</button>
 </form>
 
 <script src="../js/post.js"></script>
