--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,7 +4,7 @@
 
 {{#each posts as |post|}}
     <h3><a href="/post/{{post.id}}">{{post.title}}</a></h3>
-    <p>Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
+    <p class="italic">Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
 {{/each}}
 
 {{#if loggedIn}}
