--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{cssPath}}">
     <title>Tech Thoughts</title>
 </head>
 <body>
     <header>
-        <p id="site-title">Tech Thoughts</p>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/dashboard">Dashboard</a>
-            {{#if loggedIn}}
-                <button id="logout">Log Out</button>
-            {{else}}
-                <a href="/login">Log In</a>
-            {{/if}}
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Tech Thoughts</a>
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                    {{#if loggedIn}}
+                        <button id="logout" class="btn">Log Out</button>
+                    {{else}}
+                        <a id="login" class="nav-link btn" href="/login">Log In</a>
+                    {{/if}}
+                </div>
+            </div>
         </nav>
     </header>
     
