--- a/views/partials/login-signup.handlebars
+++ b/views/partials/login-signup.handlebars
@@ -1,18 +1,34 @@
-<h2>Log In</h2>
-<p>Already have an account? Enter your username and password below.</p>
-<form>
-    <input id="username-login" type="text" name="username-login" placeholder="Username" required/>
-    <input id="password-login" type="password" name="password-login" placeholder="Password" required/>
-    <button id="login-btn">Log In</button>
-</form>
+<div id="login-signup" class="container">
+    <div class="row">
+        <div class="card text-center col-sm-6">
+            <div class="card-header">
+                <h2>Log In</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Already have an account? Enter your username and password below.</p>
+                <form id="login-form">
+                    <input id="username-login" type="text" name="username-login" placeholder="Username" required/>
+                    <input id="password-login" type="password" name="password-login" placeholder="Password" required/>
+                    <button id="login-btn" class="btn btn-primary">Log In</button>
+                </form>
+            </div>
+        </div>
+        <div class="card text-center col-sm-6">
+            <div class="card-header">
+                <h2>Sign Up</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">New user? Sign up for an account below.</p>
+                <form id="signup-form">
+                    <input id="username-signup" type="text" name="username-signup" placeholder="Username" required/>
+                    <input id="password-signup" type="password" name="password-signup" placeholder="Password" required/>
+                    <label for="password-signup" class="italic">Password must be at least 8 characters</label>
+                    <button id="signup-btn" class="btn btn-primary">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h2>Sign Up</h2>
-<p>New user? Sign up for an account below.</p>
-<form>
-    <input id="username-signup" type="text" name="username-signup" placeholder="Username" required/>
-    <input id="password-signup" type="password" name="password-signup" placeholder="Password" required/>
-    <label for="password-signup">Password must be at least 8 characters</label>
-    <button id="signup-btn">Sign Up</button>
-</form>
 
 <script src="./js/loginSignup.js"></script>
