--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,7 +13,7 @@
     {{/if}}
 {{else}}
     <p class="lead">You must be logged in to view the dashboard. Log in or create an account below.</p>
-    {{> login-signup}}
+    {{> login}}
 {{/if}}
 
 {{#if loggedIn}}
