Clarify file names

--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -6,7 +6,7 @@
     <button id="add-post-btn" class="btn btn-success">Add Post</button>
 </form>
 
-<script src="../js/post.js"></script>
+<script src="../js/addPost.js"></script>
 {{#if loggedIn}}
     <script src="../js/logout.js"></script>
 {{/if}}
