--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,7 @@
     {{#if posts}}
         {{#each posts as |post|}}
             <h3><a href="/dashboard/{{post.id}}">{{post.title}}</a></h3>
-            <p class="italic">Posted by {{post.user.username}} on {{formatDate post.createdAt}}</p>
+            {{> timestamp post=post}}
         {{/each}}
     {{else}}
         <p>You haven't added any blog posts yet. Click "Add New Post" above to get started!</p>
