Center Add New Post button

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <h1>Dashboard</h1>
 
 {{#if loggedIn}}
-    <a href="/new-post" id="new-post-btn" class="btn btn-secondary">Add New Post</a>
+    <a href="/new-post" id="new-post-btn" class="btn btn-secondary d-block center">Add New Post</a>
     <h2>Your Blog Posts</h2>
     {{#if posts}}
         {{#each posts as |post|}}
