--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{cssPath}}">
+    <link rel="stylesheet" href="{{pathPrefix}}/css/style.css">
     <title>Tech Thoughts</title>
 </head>
 <body>
@@ -30,5 +30,8 @@
         {{{ body }}}
     </main>
 
+    {{#if loggedIn}}
+        <script src="{{pathPrefix}}/js/logout.js"></script>
+    {{/if}}
 </body>
 </html>
